--- a/aboutme.html
+++ b/aboutme.html
@@ -16,11 +16,12 @@ p	 {color: blue;}
   
     <h1>ABOUT ME</h1>
     <p> Hi! This is my page! My name is Cielo Montoya and I am a member of Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the presidend/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
-    <img src="https://lh3.google.com/u/0/d/0B93_sJ1lN-YxYmEzelAtZTVxeHc=w2880-h1652-iv1" alt="Eating Pizza" style="width:500px;height:350px;">
+    <img src="Pizza.jpg" alt="Eating Pizza" style="width:500px;height:350px;">
+    <img scr="Folklorico.jpg" alt="Folklorico" style="width:500px;height:345px;">
     
     <h2> FUN FACT</h2>
     <p> Spongebob quoter enthusiast.</p>
-    <img src="https://lh3.google.com/u/0/d/1bYXdIh1RBXSn65lq2U1nL5oLqP-zC_dd_Q=w2880-h1652-iv1" alt="Spongebob" style="width:350px;height:250px;">
+    <img src="Spongebob.gif" alt="Spongebob" style="width:350px;height:250px;">
     <p> "What's funnier than 24?" *chocked laughing* "25."
     
     <h3>LIKES/DISLIKES</h3>
