--- a/aboutme.html
+++ b/aboutme.html
@@ -71,7 +71,7 @@ p	 {color: blue;}
   </tr>
 
     <h1>SIDE SCROLLER GAME</h1>
-    <img scr="Screen1.png" alt="Heartbreaker" style="width:350px;height:250px;">
+    <img src="Screen1.png" alt="Heartbreaker" style="width:350px;height:250px;">
     <p> The player is a heart, so the objective of the game is to avoid the people because if you crash into a person, then your heart breaks.</p>
   </body>
 </html>
