--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@ p	 {color: blue;}
     <h1>ABOUT ME</h1>
     <p> Hi! This is my page! My name is Cielo Montoya and I am a member of Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the presidend/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
     <img src="Pizza.jpg" alt="Eating Pizza" style="width:500px;height:350px;">
-    <img scr="Folklorico.jpg" alt="Folklorico" style="width:500px;height:345px;">
+    <img src="Folklorico.jpg" alt="Folklorico" style="width:500px;height:345px;">
     
     <h2> FUN FACT</h2>
     <p> Spongebob quoter enthusiast.</p>
