--- a/aboutme.html
+++ b/aboutme.html
@@ -3,18 +3,25 @@
 <head>
 <style>
 body {background-color: lightpink;}
-h1   {color: black;}
-p    {color: blue;}
-h2	 {color: black;}
-p	 {color: blue;}
-h3	 {color: black;}
-p	 {color: blue;}
+h1   {color: white;}
+h2	 {color: red;}
+h3	 {color: red;}
+p {
+    font-family: arial;
+    font-size: 18px;
+    color: blue;
+}
+tr {
+	 font-family: arial;
+     font-size: 18px;
+     color: blue;
+}
 </style>
 </head>
   
   <body>
   
-    <h1>ABOUT ME</h1>
+    <h1>ABOUT ME: CIELO MONTOYA</h1>
     <p> Hi! This is my page! My name is Cielo Montoya and I am a member of Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the presidend/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
     <img src="Pizza.jpg" alt="Eating Pizza" style="width:500px;height:350px;">
     <img src="Folklorico.jpg" alt="Folklorico" style="width:500px;height:345px;">
@@ -24,7 +31,7 @@ p	 {color: blue;}
     <img src="Spongebob.gif" alt="Spongebob" style="width:350px;height:250px;">
     <p> "What's funnier than 24?" *chocked laughing* "25."
     
-    <h3>LIKES/DISLIKES</h3>
+    <h3>LIKES/DISLIKES & WEBSITES</h3>
     <table style="width:100%">
   <tr>
     <th>Likes</th>
@@ -47,11 +54,9 @@ p	 {color: blue;}
     <td>Growing Up</td>
   </tr>
   <tr>
-  	<td>Donuts</td>
+  	<td>PUGS</td>
     <td></td>
   </tr>
-    
-     <h3>WEBSITES</h3>
   	 <table style="width:100%">
   <tr>
      <th>Favourite Websites</th>
