--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,12 @@ h1   {color: white;}
 h2	 {color: red;}
 h3	 {color: red;}
 p {
-    font-family: arial;
+    font: Arial;
     font-size: 18px;
     color: blue;
 }
 tr {
-	 font-family: arial;
+	 font-family: Arial;
      font-size: 18px;
      color: blue;
 }
@@ -68,7 +68,7 @@ tr {
   </tr>
   <tr>
      <td>Facebook</td>
-     <td>Twitter: @cielontya</td>
+     <td>Twitter: @cielontoya</td>
   </tr>
   <tr>
      <td>Disney Games</td>
