--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,9 @@ tr {
     <h2> FUN FACT</h2>
     <p> Spongebob quoter enthusiast.</p>
     <img src="Spongebob.gif" alt="Spongebob" style="width:350px;height:250px;">
+    <img src="giphy.gif" alt="the office" style="width:350px;height:250px;">
     <p> "What's funnier than 24?" *chocked laughing* "25."
+    <img src="meangirls.gif" alt="mean girls" style="width:350px;height:250px;">
     
     <h3>LIKES/DISLIKES & WEBSITES</h3>
     <table style="width:100%">
