--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,41 @@ tr {
      font-size: 18px;
      color: blue;
 }
+div.container {
+    width: 100%;
+    border: 3px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 315px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
 </style>
 </head>
   
@@ -81,5 +116,29 @@ tr {
     <h1>SIDE SCROLLER GAME</h1>
     <img src="Screen1.png" alt="Heartbreaker" style="width:350px;height:250px;">
     <p> The player is a heart, so the objective of the game is to avoid the people because if you crash into a person, then your heart breaks.</p>
+  
+
+<div class="container">
+
+<header>
+   <h1>CIELO MONTOYA</h1>
+</header>
+  
+<nav>
+  <ul>
+    <img src="Pizza.jpg" alt="Eating Pizza" style="width:155px;height:95px;">
+    <img src="Folklorico.jpg" alt="Folklorico" style="width:155px;height:95px;">
+  </ul>
+</nav>
+
+<article>
+  <h1>About Me</h1>
+  <p>Hi! This is my page! My name is Cielo Montoya and I am a member of Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the presidend/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
+  <h2>Fun Fact</h2>
+</article>
+
+<footer>Copyright &copy; Cielo Montoya</footer>
+
+</div>
   </body>
 </html>
