--- a/aboutme.html
+++ b/aboutme.html
@@ -69,7 +69,7 @@ article {
     <p> "What's funnier than 24?" *chocked laughing* "25."
     
     <h3>LIKES/DISLIKES & WEBSITES</h3>
-    <table style="width:100%">
+  <table style="width:100%">
   <tr>
     <th>Likes</th>
     <th>Dislikes</th>
@@ -112,7 +112,7 @@ article {
      <td>Disney Games</td>
      <td>Gmail: mariacielomontoya@gmail.com</td>
   </tr>
-
+</table>
     <h1>SIDE SCROLLER GAME</h1>
     <img src="Screen1.png" alt="Heartbreaker" style="width:350px;height:250px;">
     <p> The player is a heart, so the objective of the game is to avoid the people because if you crash into a person, then your heart breaks.</p>
