--- a/aboutme.html
+++ b/aboutme.html
@@ -64,17 +64,17 @@ article {
   
 <nav>
   <ul>
-    <img src="Pizza.jpg" alt="Eating Pizza" style="width:155px;height:95px;">
-    <img src="Folklorico.jpg" alt="Folklorico" style="width:155px;height:95px;">
-    <img src="Spongebob.gif" alt="Spongebob" style="width:300px;height:215px;">
+    <img src="Pizza.jpg" alt="Eating Pizza" style="width:300px;height:245px;">
+    <img src="Folklorico.jpg" alt="Folklorico" style="width:300px;height:245px;">
+    <img src="straws.gif" alt="straw" style="width:300px;height:215px;">
   </ul>
 </nav>
 
 <article>
   <h1>About Me</h1>
-  <p>Hi! This is my page! My name is Cielo Montoya and I am a member of Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the presidend/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
+  <p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
   <h2>Fun Fact</h2>
-  <p> Quoter enthusiast.</p>
+  <p> I carry straws, to have in case a place doesn't have any.</p>
   <h3>LIKES/DISLIKES</h3>
     <table style="width:100%">
   <tr>
