--- a/aboutme.html
+++ b/aboutme.html
@@ -3,17 +3,20 @@
 <head>
 <style>
 body {background-color: lightpink;}
-h1   {color: white;}
-h2	 {color: red;}
-h3	 {color: red;}
+h1   {color: white;
+      font-size: 30px;}
+h2	 {color: red;
+      font-size: 30px;}
+h3	 {color: red;
+      font-size: 30px}
 p {
     font-family: Arial;
-    font-size: 18px;
+    font-size: 20px;
     color: blue;
 }
 tr {
      font-family: Arial;
-     font-size: 18px;
+     font-size: 20px;
      color: blue;
 }
 div.container {
@@ -143,5 +146,5 @@ article {
 </div>
 
   </body>
-<footer>Copyright &copy; Cielo Montoya</footer>
+<footer>Copyright &copy; 2017 Cielo Montoya</footer>
 </html>
