--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,9 @@ h2	 {color: red;
       font-size: 30px;}
 h3	 {color: red;
       font-size: 30px}
+h4	 {color: red;
+	    font-size:30px;}
+  
 p {
     font-family: Arial;
     font-size: 20px;
@@ -34,7 +37,7 @@ header, footer {
 
 nav {
     float: left;
-    max-width: 315px;
+    max-width: 400px;
     margin: 0;
     padding: 1em;
 }
@@ -67,8 +70,8 @@ article {
   
 <nav>
   <ul>
-    <img src="Pizza.jpg" alt="Eating Pizza" style="width:300px;height:245px;">
-    <img src="Folklorico.jpg" alt="Folklorico" style="width:300px;height:245px;">
+    <img src="Pizza.jpg" alt="Eating Pizza" style="width:325px;height:245px;">
+    <img src="Folklorico.jpg" alt="Folklorico" style="width:325px;height:245px;">
     <img src="straws.gif" alt="straw" style="width:300px;height:215px;">
   </ul>
 </nav>
