--- a/aboutme.html
+++ b/aboutme.html
@@ -81,7 +81,7 @@ article {
   <p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
   <h2>Fun Fact</h2>
   <p> I carry straws, to have in case a place doesn't have any.</p>
-  <h3>LIKES/DISLIKES</h3>
+  <h3>Likes/Dislikes</h3>
     <table style="width:100%">
   <tr>
   	<th>Dislikes</th>
