--- a/aboutme.html
+++ b/aboutme.html
@@ -148,6 +148,24 @@ article {
 </article>
 </div>
 
+<header>
+   <h1>REFLECTION</h1>
+</header>
+  
+<nav>
+  <ul>
+    <img src="Screen2.png" alt="txt adventure game" style="width:255px;height:185px;">
+  </ul>
+</nav>
+
+<article>
+  <h1>June 29: SCRATCH & PYTHON</h1>
+  <p>.....</p>
+  <h2>June 30: TEXT ADVENTURE GAME</h2>
+  <p>A real life analogy that can explain the code.</p>
+</article>
+</div>
+
   </body>
 <footer>Copyright &copy; 2017 Cielo Montoya</footer>
 </html>
