--- a/aboutme.html
+++ b/aboutme.html
@@ -148,6 +148,8 @@ article {
 </article>
 </div>
 
+<div class="container">
+	  
 <header>
    <h1>REFLECTION</h1>
 </header>
@@ -162,7 +164,7 @@ article {
   <h1>June 29: SCRATCH & PYTHON</h1>
   <p>.....</p>
   <h2>June 30: TEXT ADVENTURE GAME</h2>
-  <p>A real life analogy that can explain the code.</p>
+  <p>Real-life analogy for the code: So when people want to eat, there's the appetizers menu, where people have their own choice to pick what they want to eat. Then there's the main course of food, were again people can choose their desired food, and finally there's dessert. The game has one level but within that level, there's more to pick for yourself; so y</p>
 </article>
 </div>
 
