--- a/aboutme.html
+++ b/aboutme.html
@@ -164,7 +164,7 @@ article {
   <h1>June 29: SCRATCH & PYTHON</h1>
   <p>.....</p>
   <h2>June 30: TEXT ADVENTURE GAME</h2>
-  <p>Real-life analogy for the code: So when people want to eat, there's the appetizers menu, where people have their own choice to pick what they want to eat. Then there's the main course of food, were again people can choose their desired food, and finally there's dessert. The game has one level but within that level, there's more to pick for yourself; so y</p>
+  <p>Real-life analogy for the code: So when people want to eat, there's a menu, where people have their own choice to pick what they want to eat; and within that there are more choices to make on the meal, like a drink, the appetizer, and more food.</p>
 </article>
 </div>
 
