--- a/aboutme.html
+++ b/aboutme.html
@@ -165,6 +165,8 @@ article {
   <p>.....</p>
   <h2>June 30: TEXT ADVENTURE GAME</h2>
   <p>Real-life analogy for the code: So when people want to eat, there's a menu, where people have their own choice to pick what they want to eat; and within that there are more choices to make on the meal, like a drink, the appetizer, and more food.</p>
+  <h3>July 5</h3>
+  <p>......</p>
 </article>
 </div>
 
