--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,12 @@ h3	 {color: red;
       font-size: 30px}
 h4	 {color: red;
 	    font-size:30px;}
-  
+h5	 {color: red;
+	    font-size:30px;}
+h6   	 {color: red;
+	    font-size:30px;}
+h7 	 {color: red;
+	    font-size:30px;}
 p {
     font-family: Arial;
     font-size: 20px;
@@ -77,11 +82,11 @@ article {
 </nav>
 
 <article>
-  <h1>About Me</h1>
+  <h2>About Me</h2>
   <p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
-  <h2>Fun Fact</h2>
+  <h3>Fun Fact</h3>
   <p> I carry straws, to have in case a place doesn't have any.</p>
-  <h3>Likes/Dislikes</h3>
+  <h4>Likes/Dislikes</h4>
     <table style="width:100%">
   <tr>
   	<th>Dislikes</th>
@@ -108,7 +113,7 @@ article {
     <td>PUGS</td>
   </tr>
   </table>
-  <h4>Websites</h4>
+  <h5>Websites</h5>
   <table style="width:100%">
   <tr>
      <th>Favourite Websites</th>
@@ -143,7 +148,7 @@ article {
 </nav>
 
 <article>
-  <h1>Side Scroller Game: HEARTBREAKER</h1>
+  <h2>Side Scroller Game: HEARTBREAKER</h2>
   <p>The player is a heart, so the objective of the game is to avoid the people because if you crash into a person, then your heart breaks.</p>
 </article>
 </div>
@@ -161,11 +166,11 @@ article {
 </nav>
 
 <article>
-  <h1>June 29: SCRATCH & PYTHON</h1>
+  <h2>June 29: SCRATCH & PYTHON</h2>
   <p>.....</p>
-  <h2>June 30: TEXT ADVENTURE GAME</h2>
+  <h3>June 30: TEXT ADVENTURE GAME</h3>
   <p>Real-life analogy for the code: So when people want to eat, there's a menu, where people have their own choice to pick what they want to eat; and within that there are more choices to make on the meal, like a drink, the appetizer, and more food.</p>
-  <h3>July 5</h3>
+  <h4>July 5</h4>
   <p>......</p>
 </article>
 </div>
