--- a/aboutme.html
+++ b/aboutme.html
@@ -63,8 +63,14 @@ article {
     overflow: hidden;}
 </style>
 </head>
+	
+############javascript add on
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	
+###########js ends	
   
-  <body>
+<body>
 
 <div class="container">
 
@@ -74,6 +80,44 @@ article {
   
 <nav>
   <ul>
+	  
+	  
+	  
+##########slideshow images start	  
+	<div class="w3-content w3-display-container">
+  <img class="mySlides" src="Pizza.jpg" style="width:100%">
+  <img class="mySlides" src="Folklorico.jpg" style="width:100%">
+  <img class="mySlides" src="pink.jpg" style="width:100%">
+  <img class="mySlides" src="blue.jpg" style="width:100%">
+  <img class="mySlides" src="white.jpg" style="width:100%">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+</div> 
+	  
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
+</script>
+	  
+	  
+###########slideshow ends	  
+	
     <img src="Pizza.jpg" alt="Eating Pizza" style="width:350px;height:245px;">
     <img src="Folklorico.jpg" alt="Folklorico" style="width:350px;height:245px;">	  
     <img src="straws.gif" alt="straw" style="width:350px;height:215px;">
