--- a/aboutme.html
+++ b/aboutme.html
@@ -116,10 +116,9 @@ function showDivs(n) {
 
 <article>
   <h2>About Me</h2>
-  <p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
+  	<p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
   <h3>Fun Fact</h3>
-  	<button onclick="getElementById('fact').innerHTML=Fact">FUN FACT HERE</button>
-  	<p id="fact"> I carry straws everywhere I go, to have in case a lace doesn't have any.</p>	
+  	<p> I carry straws everywhere I go, to have in case a lace doesn't have any.</p>	
   <h4>Likes/Dislikes</h4>
     <table style="width:100%">
   <tr>
