--- a/aboutme.html
+++ b/aboutme.html
@@ -154,11 +154,13 @@ function showDivs(n) {
   </tr>
   <tr>
      <td>Netflix</td>
-     <td>Instagram: @cielontoya</td>
+     <td><input type="button" value="Instagram"
+onclick="window.open('https://www.instagram.com/cielontoya/')"></td>
   </tr>
   <tr>
      <td>Facebook</td>
-     <td>Twitter: @cielontoya</td>
+     <td><input type="button" value="Twitter"
+onclick="window.open('http://www.twitter.com/cielontoya')"></td>
   </tr>
   <tr>
      <td></td>
