more profile buttons

--- a/aboutme.html
+++ b/aboutme.html
@@ -164,6 +164,11 @@ onclick="window.open('http://www.twitter.com/cielontoya')"></td>
   </tr>
   <tr>
      <td></td>
+     <td><input type="button" value="LinkedIn"
+onclick="window.open('https://www.linkedin.com/in/maria-del-cielo-montoya-a2035b141/')"></td>
+  </tr>
+  <tr>
+     <td></td>
      <td>Gmail: mariacielomontoya@gmail.com</td>
   </tr>
   </table>
