changed and added info

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,6 @@ div.container {
     width: 100%;
     border: 3px solid gray;
 }
-
 header, footer {
     padding: 1em;
     color: white;
@@ -40,14 +39,12 @@ header, footer {
     clear: left;
     text-align: center;
 }
-
 nav {
     float: left;
     max-width: 400px;
     margin: 0;
     padding: 1em;
 }
-
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -56,7 +53,6 @@ nav ul {
 nav ul a {
     text-decoration: none;
 }
-
 article {
     margin-left: 170px;
     border-left: 1px solid gray;
@@ -94,11 +90,9 @@ article {
 <script>
 var slideIndex = 1;
 showDivs(slideIndex);
-
 function plusDivs(n) {
   showDivs(slideIndex += n);
 }
-
 function showDivs(n) {
   var i;
   var x = document.getElementsByClassName("mySlides");
@@ -119,37 +113,10 @@ function showDivs(n) {
 
 <article>
   <h2>About Me</h2>
-  	<p>Hi! This is my page! My name is Cielo Montoya and I am a member of the 2017 Summer Girls Who Code. I will be a senior in the fall of 2017. I LOVE pizza, but only if it's pepperoni. And I am also the president/teacher of the Ballet Folklorico Club at my school, SLHS.</p>
+  	<p>Hello! :D This is my page! My name is Cielo Montoya and I was a member of the 2017 Summer Girls Who Code. I will be a freshman in college the fall of 2018. I LOVE pizza, but only if it's pepperoni.</p>
   <h3>Fun Fact</h3>
-  	<p> I carry straws everywhere I go, to have in case a place doesn't have any.</p>	
-  <h4>Likes/Dislikes</h4>
-    <table style="width:100%">
-  <tr>
-  	<th>Dislikes</th>
-    <th>Likes</th>
-  </tr>
-  <tr>
-    <td>Onions</td>
-    <td>Dogs</td>
-  </tr>
-  <tr>
-    <td>Fruit</td>
-    <td>Reading</td>
-  </tr>
-  <tr>
-    <td>HEAT/ HOT WEATHER</td>
-    <td>Netflix</td>
-  </tr>
-  <tr>
-    <td>Growing Up</td>
-    <td>Pizza</td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>PUGS</td>
-  </tr>
-  </table>
-  <h5>Websites</h5>
+  	<p> I carry re-usable straws everywhere I go, to have in case a place doesn't have any. </p>	
+  <h4>Websites</h4>
   <table style="width:100%">
   <tr>
      <th>Favourite Websites</th>
@@ -187,32 +154,20 @@ onclick="window.open('https://www.linkedin.com/in/maria-del-cielo-montoya-a2035b
 <nav>
   <ul>
     <img src="Screen1.png" alt="Heartbreaker" style="width:255px;height:185px;">
+    
+    <img src="Screen Shot 2018-06-27 at 6.13.47 PM.png" alt="BuzzBuzz" style="width:255px;height:185px;">
   </ul>
 </nav>
 
 <article>
   <h2>Side Scroller Game: HEARTBREAKER</h2>
   <p>The player is a heart, so the objective of the game is to avoid the people because if you crash into a person, then your heart breaks.</p>
+  <h2>Final Project: BUZZ BUZZ </h2>
+  <p>Since the amount of bees alive has been declining, our group decided to make a website that can help save bees, in actions that people can perform.</p>
 </article>
 </div>
 
-<div class="container">
-	  
-<header>
-   <h1>REFLECTION</h1>
-</header>
-  
-<nav>
-  <ul>
-    <img src="Screen2.png" alt="txt adventure game" style="width:255px;height:185px;">
-  </ul>
-</nav>
 
-<article>
-  <h2>June 30: TEXT ADVENTURE GAME</h2>
-  <p>Real-life analogy for the code: So when people want to eat, there's a menu, where people have their own choice to pick what they want to eat; and within that there are more choices to make on the meal, like a drink, the appetizer, and more food.</p>
-</article>
-</div>
 
   </body>
 <footer>Copyright &copy; 2017 Cielo Montoya</footer>
