--- a/aboutme.html
+++ b/aboutme.html
@@ -112,11 +112,11 @@ function showDivs(n) {
 </nav>
 
 <article>
-  <h2>About Me</h2>
+  <h2>ABOUT ME</h2>
   	<p>Hello! :D This is my page! My name is Cielo Montoya and I was a member of the 2017 Summer Girls Who Code. I will be a freshman in college the fall of 2018. I LOVE pizza, but only if it's pepperoni.</p>
-  <h3>Fun Fact</h3>
+  <h2>FUN FACT</h2>
   	<p> I carry re-usable straws everywhere I go, to have in case a place doesn't have any. </p>	
-  <h4>Websites</h4>
+  <h2>WEBSITES</h2>
   <table style="width:100%">
   <tr>
      <th>Favourite Websites</th>
